# planning-in-robotics

./: LICENSE  README.md
A-star/: Astar.py  README.md
A-star/holonomic_robot/: Astar.py  README.md  obstacleSpace.py
A-star/non-holonomic_robot/: README.md  obstacleSpace.py  tb3_astar.py
Dijkstra/: Dijkstra.py  README.md
dp-with-mms/: Makefile  README.md  compile_commands.json
dp-with-mms/.codelite/: project.session
dp-with-mms/cpp_code/: a.out  compile_flags.txt  cpp_code.mk  cpp_code.txt  main.cpp
dp-with-mms/cpp_code/Debug/: cpp_code  src_API_api.cpp.o.d  src_Algorithm_algorithm.cpp.o.d  src_Algorithm_bfsalgorithm.cpp.o.d  src_BFSAlgorithm_bfsalgorithm.cpp.o.d  src_DFSAlgorithm_dfsalgorithm.cpp.o.d  src_DIJKSTRAlgorithm_dijkstralgorithm.cpp.o.d  src_LandBasedRobot_landbasedrobot.cpp.o.d  src_LandBasedTracked_landbasedtracked.cpp.o.d  src_Maze_maze.cpp.o.d
dp-with-mms/doc/: final_project_doxy
path-finding-with-mms/: README.md  compile_commands.json  project.workspace
path-finding-with-mms/.codelite/: project-rachith.tags-shm  project-rachith.tags-wal  project.session
path-finding-with-mms/cpp_code/: a.out  compile_flags.txt  cpp_code.mk  cpp_code.project  cpp_code.txt  main.cpp
path-finding-with-mms/cpp_code/Debug/: cpp_code  main.cpp.o.d  src_LandBasedWheeled_landbasedwheeled.cpp.o.d  src_MinHeap_minheap.cpp.o.d
tsp/: README.md
tsp/cpp/: CMakeLists.txt
tsp/cpp/include/: costmap.h  minheap.h  vertex.h
tsp/cpp/src/: edge.cpp  main.cpp  minheap.cpp
tsp/in_out_files/: eil101.out.tour  eil51.out.tour  eil76.out.tour
(+208 files in other folders)
